# auto-router

./: Cargo.toml  Makefile  auto-router.service  build.rs  config.yml  readme.md
src/: config.rs  main.rs  myipset.rs  mynfq.c  mynfq.rs  rdsutils.rs
