[package]
name = "auto-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.21.5"
lazy_static = "1.4.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.25"

[build-dependencies]
cc = "1.0.73"
